--- a/Booking.html
+++ b/Booking.html
@@ -600,8 +600,8 @@
               <option value="" disabled selected>Select Hotel Category</option>
               <option value="2_star">2**</option>
               <option value="3_star">3***</option>
-              <option value="4_star">4**</option>
-              <option value="5_star">5***</option>
+              <option value="4_star">4****</option>
+              <option value="5_star">5*****</option>
               <option value="budget">Budget Hotel</option>
               <option value="resorts">Resorts</option>
               <option value="cortez">Cortez</option>
